# ollama-downloader

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  justfile  pyproject.toml  run-tests.sh  thing.path  uv-upgrade.sh
.github/workflows/: uv-pytest-self-hosted.yml  uv-pytest.yml
conf/: settings.json
conf-x/: settings.json
screencasts/: demo_model_download.cast
src/ollama_downloader/: __init__.py  cli.py  common.py  data_models.py  hf_model_downloader.py  model_downloader.py  sysinfo.py  utils.py
src/ollama_downloader/data/: data_models.py
src/ollama_downloader/downloader/: downloader.py  hf_model_downloader.py  model_downloader.py  ollama_model_downloader.py
tests/: filter_profile_data.py  test_data_models.py  test_models.py  test_system_info.py  test_typer.py
