[project]
name = "ollama-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anirban Basu", email = "anirbanbasu@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.5.3",
    "pydantic>=2.11.7",
    "typer>=0.16.0",
]

[project.scripts]
od = "ollama_downloader.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "icecream>=2.1.7",
    "pre-commit>=4.3.0",
]
test = [
    "pytest>=8.4.1",
]
