[project]
name = "ollama-downloader"
version = "0.1.0"
description = "A model downloader for Ollama, for now."
readme = "README.md"
authors = [
    { name = "Anirban Basu", email = "anirbanbasu@users.noreply.github.com" },
    { name = "Jairo Lopez", email = "nacarino@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.28.1",
    "lxml>=6.0.0",
    "ollama>=0.5.3",
    "typer>=0.16.0",
]

[project.scripts]
od = "ollama_downloader.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "icecream>=2.1.7",
    "pre-commit>=4.3.0",
]
test = [
    "coverage>=7.10.4",
    "pytest>=8.4.1",
]
