[project]
name = "ollama-downloader"
version = "0.1.1.dev0"
description = "A library and Hugging Face model downloader for Ollama."
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["downloader", "tool", "models", "web-scraper", "huggingface", "huggingface-models", "ollama", "ollama-downloader", "ollama-model", "ollama-library"]
authors = [
    { name = "Anirban Basu", email = "anirbanbasu@users.noreply.github.com" },
    { name = "Jairo Lopez", email = "nacarino@users.noreply.github.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
requires-python = ">=3.12"
dependencies = [
    "environs>=14.3.0",
    "httpx[http2]>=0.28.1",
    "huggingface-hub>=0.34.4",
    "lxml>=6.0.0",
    "ollama>=0.5.3",
    "typer>=0.16.0",
]

[tool.uv.sources]
huggingface-hub = { git = "https://github.com/huggingface/huggingface_hub.git" }

[project.scripts]
od = "ollama_downloader.cli:main"
ollama-downloader = "ollama_downloader.cli:main"

[project.urls]
Repository = "https://github.com/anirbanbasu/ollama-downloader"
Issues = "https://github.com/anirbanbasu/ollama-downloader/issues"
Download = "https://pypi.org/project/ollama-downloader/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "icecream>=2.1.7",
    "pre-commit>=4.3.0",
]
test = [
    "coverage>=7.10.4",
    "pytest>=8.4.1",
    "pytest-profiling>=1.8.1",
]
